tests/baselines/reference/checkUntypedCallError.errors.txt
tests/cases/compiler/checkUntypedCallError.ts(5,10): error TS2345: Argument of type '12' is not assignable to parameter of type 'string'.
tests/cases/compiler/checkUntypedCallError.ts(7,14): error TS2345: Argument of type '12' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/checkUntypedCallError.ts (2 errors) ====
    function greeting(username: string, x: () => void) {
        x();
        return `Hello, ${username}!`;
    }
    greeting(12, () => {       // error
             ~~
!!! error TS2345: Argument of type '12' is not assignable to parameter of type 'string'.
        greeting('hi', () => 12)  // ok
        greeting(12, () => 12) // error
                 ~~
!!! error TS2345: Argument of type '12' is not assignable to parameter of type 'string'.
    });
    